--- a/index.html
+++ b/index.html
@@ -532,41 +532,97 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Mpakogiannis School</h4>
 
-              <span>2007 — 2008</span>
+              <span>January 2023 — now</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Secondary School
+              </p>
+              <p class="timeline-text">
+                Larissa | Greece
+              </p>            
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Apostolou Varnava Lyceum</h4>
+
+              <span>September 2023 — January 2023</span>
+
+              <p class="timeline-text">
+                Secondary School
+              </p>
+              <p class="timeline-text">
+                Nicosia | Cyprus
+              </p>            
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Stavrou Gymnasium</h4>
+
+              <span>2021 — 2023</span>
+
+              <p class="timeline-text">
+                Secondary Education
+              <p class="timeline-text">
+                Nicosia | Cyprus
+              </p>
+              <p class="timeline-text">
+                Graduated with:
+              <p class="timeline-text">
+                19.93:First year , 20:Second year
+              </p>
+
+            </li>
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Doukas School</h4>
+
+              <span>2020 — 2021</span>
+
+              <p class="timeline-text">
+                Secondary Education
+              <p class="timeline-text">
+                Athens | Greece
+              </p>
+              <p class="timeline-text">
+                Graduated with: 20
+              <p class="timeline-text">
+                Scholarship for Gymnasium and Lyceum
+              </p>
+
+
+            </li>
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">4o Primary School of Agia Paraskeui</h4>
+
+              <span>2019 — 2020</span>
+
+              <p class="timeline-text">
+                Primary school
+              </p>
+              <p class="timeline-text">
+                Larissa | Greece
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Mpakogiannis School</h4>
 
-              <span>2006 — 2007</span>
+              <span>2015 — 2018</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                Primary School
               </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
-
-              <span>2002 — 2004</span>
-
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                Larissa | Greece
               </p>
 
             </li>
